fix: fix overflow issue on detail and comment add color-scheme:dark #78

--- a/styles/index.css
+++ b/styles/index.css
@@ -4,6 +4,7 @@
 
 body {
   font-size: 12px;
+  color-scheme: dark;
   @apply font-medium text-white bg-gray-500;
 }
 
